Mavenizing / Make different profiles