@@ -8,6 +8,8 @@ import java.io.UnsupportedEncodingException;
 
 import javax.xml.xpath.XPathExpressionException;
 
+import org.apache.commons.codec.binary.Base64;
+
 import com.ibm.xsp.extlib.util.ExtLibUtil;
 import com.raidomatic.xml.XMLNode;
 
@@ -15,11 +17,11 @@ import com.raidomatic.xml.XMLNode;
 import lotus.domino.Database;
 import lotus.domino.Document;
 import lotus.domino.DxlImporter;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+
 
 public class Stylesheet extends AbstractDXLDesignNote {
 	private static final long serialVersionUID = -3543549758559295423L;
+
 	public Stylesheet(String databaseDocumentId, String designDocumentId) throws Exception {
 		super(databaseDocumentId, designDocumentId);
 	}
@@ -27,28 +29,29 @@ public class Stylesheet extends AbstractDXLDesignNote {
 	public String getContent() throws XPathExpressionException, UnsupportedEncodingException, IOException {
 		String fileData = this.getRootNode().selectSingleNode("/stylesheetresource/filedata").getTextContent();
 
-		//return Base64Coder.decodeString(fileData);
-		return new String(new BASE64Decoder().decodeBuffer(fileData), "UTF-8");
-		//return new String(Base64.decodeBase64(fileData), "UTF-8");
+		return new String(Base64.decodeBase64(fileData), "UTF-8");
+		// return new String(Base64.decodeBase64(fileData), "UTF-8");
 	}
+
 	public void setContent(String content) throws XPathExpressionException {
 		XMLNode dataNode = this.getRootNode().selectSingleNode("/stylesheetresource/filedata");
-		dataNode.setTextContent(new BASE64Encoder().encodeBuffer(content.getBytes()).replace("\r", ""));
-		//dataNode.setTextContent(Base64.encodeBase64String(content.getBytes()));
+		dataNode.setTextContent(Base64.encodeBase64String(content.getBytes()).replace("\r", ""));
+		
 	}
 
 	public static String create(String databaseDocumentId, String name) throws Exception {
 		DxlImporter importer = null;
 		try {
 			// Designer is case-sensitive too
-			if(!name.endsWith(".css")) {
+			if (!name.endsWith(".css")) {
 				name = name + ".css";
 			}
 
-			InputStream is = Stylesheet.class.getResourceAsStream("/org/openntf/eclipse/xdpe/publisher/frostillicus/dxl/stylesheet.xml");
+			InputStream is = Stylesheet.class
+					.getResourceAsStream("/org/openntf/eclipse/xdpe/publisher/frostillicus/dxl/stylesheet.xml");
 			BufferedReader reader = new BufferedReader(new InputStreamReader(is));
 			StringBuilder xmlBuilder = new StringBuilder();
-			while(reader.ready()) {
+			while (reader.ready()) {
 				xmlBuilder.append(reader.readLine());
 				xmlBuilder.append("\n");
 			}
@@ -59,14 +62,15 @@ public class Stylesheet extends AbstractDXLDesignNote {
 			importer.setDesignImportOption(DxlImporter.DXLIMPORTOPTION_REPLACE_ELSE_CREATE);
 			importer.setReplicaRequiredForReplaceOrUpdate(false);
 			Document databaseDoc = ExtLibUtil.getCurrentDatabase().getDocumentByUNID(databaseDocumentId);
-			Database foreignDB = ExtLibUtil.getCurrentSessionAsSignerWithFullAccess().getDatabase(databaseDoc.getItemValueString("Server"), databaseDoc.getItemValueString("FilePath"));
+			Database foreignDB = ExtLibUtil.getCurrentSessionAsSignerWithFullAccess()
+					.getDatabase(databaseDoc.getItemValueString("Server"), databaseDoc.getItemValueString("FilePath"));
 			importer.importDxl(xml, foreignDB);
 
 			Document importedDoc = foreignDB.getDocumentByID(importer.getFirstImportedNoteID());
 			return importedDoc.getUniversalID();
-		} catch(Exception e) {
+		} catch (Exception e) {
 			e.printStackTrace();
-			if(importer != null) {
+			if (importer != null) {
 				System.out.println(importer.getLog());
 			}
 		}
